text and alignment fixes

--- a/src/Button/button.css
+++ b/src/Button/button.css
@@ -30,6 +30,10 @@
     }
   }
 
+  & [class*='u-text--'] {
+    line-height: 1;
+  }
+
   &.u-button--size-large .u-button__inner {
     height: #{$space-xxlarge}px;
   }
