--- a/src/Input/input.css
+++ b/src/Input/input.css
@@ -56,7 +56,7 @@
 
   & .u-input--select__chevron {
     position: absolute;
-    top: 22px;
+    top: 12px;
     right: 0px;
     padding: 0;
     z-index: 2;
@@ -77,15 +77,14 @@
     }
     & select {
       border-radius: map-get(map-get($border, radius), standard);
-      padding: 7px #{$space-medium}px 7px 10px;
+      padding: 7px #{$space-large}px 7px 10px;
       border: 1px solid #e1e1e1;
       &.focus-visible {
         box-shadow: 0 0 0 3px color(map-get($base-colors, formAccent) a(40%));
       }
     }
     & .u-input--select__chevron {
-      top: 30px;
-      right: 4px;
+      right: 10px;
     }
   }
 
